--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
        <div class="topheader">
         
         <form class="lookup">
-          <label for="search"> <img class='admin-dashboard/magnify' src="magnify.svg"> </label>
+          <label for="search"> <img class='./admin-dashboard/magnify' src="magnify.svg"> </label>
       <input type="search" id="search"></form>
 
       <div class="info">
